[FIX] #59176 Extended search

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/AdvancedSearch/_SearchOverview.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/AdvancedSearch/_SearchOverview.cshtml
@@ -22,9 +22,16 @@
                              <td>
                                  <select id="lstfilterCustomers" name="lstfilterCustomers" data-field="customers" data-placeholder="@Translation.Get("Välj en eller flera", Enums.TranslationSource.TextTranslation)" multiple="multiple" class="chosen-select">
                                      @foreach (var c in Model.CaseSearchFilterData.filterCustomers)
-                                     {                                            
-                                         int customerId = int.Parse(c.Value);                
-                                         <option value="@customerId" @customerId.IdIsSelected(Model.CaseSearchFilterData.caseSearchFilter.Customer)>@c.Name</option>                                          
+                                     {
+                                         int customerId = int.Parse(c.Value);
+                                         <option value="@customerId" @customerId.IdIsSelected(Model.CaseSearchFilterData.caseSearchFilter.Customer)>@c.Name</option>
+                                     }
+                                 </select>
+                                 <select id="lstIncludedCustomers" name="lstIncludedCustomers" data-field="customers" style="display: none">
+                                     @foreach (var c in Model.ExtendIncludedCustomers)
+                                     {
+                                         int customerId = int.Parse(c.Value);
+                                         <option value="@customerId" @customerId.IdIsSelected(Model.CaseSearchFilterData.caseSearchFilter.Customer)>@c.Name</option>
                                      }
                                  </select>
                              </td>
@@ -85,7 +92,7 @@
                                          <option value="@r.Value" @curId.IdIsSelected(Model.CaseSearchFilterData.caseSearchFilter.MaxRows)> @r.Name </option>                                                                               
                                      }
                                  </select>
-                                  @Translation.GetCoreTextTranslation("poster i sökresultat/Kund")                                 
+                                  @Translation.GetCoreTextTranslation("poster i sökresultat/Kund")
                              </td>
                          </tr>                                         
                      }                                                
@@ -95,7 +102,6 @@
                          </td>
                          <td>
                              <input type="checkbox" name="@CaseFilterFields.IsExtendedSearch" id="@CaseFilterFields.IsExtendedSearch" value="true"/>
-                             @Html.HiddenFor(m => m.CaseSearchFilterData.customerSetting.CustomerInExtendedSearch, new {id="customerInExtendedSearch"})
                          </td>
                      </tr>
                  </table>
