[FIX] #59376 Category - inactivate sublevels - Admin

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/Category/_Input.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/Category/_Input.cshtml
@@ -16,6 +16,7 @@
                             @Translation.GetCoreTextTranslation("som används går inte att ta bort")
                         </div>
                     }
+                    @Html.ValidationSummary()
                     <h4>@Translation.GetCoreTextTranslation("Allmänt")</h4>
                     <div class="row">
                         <div class="span12">
