--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/AdvancedSearch/_SearchOverview.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/AdvancedSearch/_SearchOverview.cshtml
@@ -6,8 +6,10 @@
 @using DH.Helpdesk.Web.Enums
 @using DH.Helpdesk.Web.Infrastructure.Extensions
 
-@if (Model != null)
-{        
+@if (Model != null)     
+{   
+    
+
      <div class="container">         
          <div class="row">             
                          
@@ -94,17 +96,21 @@
                                  </select>
                                   @Translation.GetCoreTextTranslation("poster i sökresultat/Kund")
                              </td>
-                         </tr>                                         
-                     }                                                
-                     <tr>
+                         </tr>
+                     }
+                    
+                     @*Hide temporary this release - Stina*@
+                     @*<tr>
                          <td>
                              @Translation.GetCoreTextTranslation("Utökad sökning")
                          </td>
                          <td>
-                             <input type="checkbox" name="@CaseFilterFields.IsExtendedSearch" id="@CaseFilterFields.IsExtendedSearch" value="true"/>
+                             <input type="checkbox" name="@CaseFilterFields.IsExtendedSearch" id="@CaseFilterFields.IsExtendedSearch" value="true"/>                             
                          </td>
-                     </tr>
+                     </tr>*@
                  </table>
+                 @*Hide temporary this release - Stina*@
+                 <input type="hidden" name="@CaseFilterFields.IsExtendedSearch" id="@CaseFilterFields.IsExtendedSearch" value="false" />
              </div>
 
               <div class="span6">
