[CHANGE] #59475 Selfservice: Split a case with extended case into sub cases based on casetemplates (Initial code, todo: error handling).

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/CaseSolution/_Input.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/CaseSolution/_Input.cshtml
@@ -47,6 +47,7 @@
                                 @Html.HiddenFor(model => model.CaseSolution.TemplatePath)
                                 @Html.HiddenFor(model => model.CaseSolution.ValidateOnChange)
                                 @Html.HiddenFor(model => model.CaseSolution.NextStepState)
+                                @Html.HiddenFor(model => model.CaseSolution.SplitToCaseSolutionType)
                                 <tr>
                                     <td style="width:200px">
                                         @Translation.Get("Ärendemall", Enums.TranslationSource.TextTranslation)
