--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/SelfServiceSetting/Index.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/SelfServiceSetting/Index.cshtml
@@ -253,16 +253,16 @@
                                             </tr>
                                             <tr>
                                                 <td>
-                                                    <select id="AvailableCaseTypes" multiple="multiple" name="AvailableCaseTypes" style="width: 350px; height: 120px">
+                                                    <select id="AvailableCaseTypes" multiple="multiple" name="AvailableCaseTypes" style="width: 400px; height: 120px">
                                                         @foreach (var op in Model.AvailableCaseTypes)
                                                         {
                                                             if (!op.Disabled)
                                                             {
-                                                                <option value="@op.Value">@op.Text</option>
+                                                                <option value="@op.Value" title="@op.Text">@op.Text</option>
                                                             }
                                                             else
                                                             {
-                                                                <option value="@op.Value" class="DisabledChosen">@op.Text</option>
+                                                                <option value="@op.Value" class="DisabledChosen" title="@op.Text">@op.Text</option>
                                                             }
                                                         }
                                                     </select>
@@ -272,16 +272,16 @@
                                                     <input type="button" value="&gt;" class="btn" id="addCaseType" />
                                                 </td>
                                                 <td>
-                                                    <select id="SelectedCaseTypes" multiple="multiple" name="SelectedCaseTypes" style="width: 350px; height: 120px">
+                                                    <select id="SelectedCaseTypes" multiple="multiple" name="SelectedCaseTypes" style="width: 400px; height: 120px">
                                                         @foreach (var op in Model.SelectedCaseTypes)
                                                         {
                                                             if (!op.Disabled)
                                                             {
-                                                                <option value="@op.Value">@op.Text</option>
+                                                                <option value="@op.Value" title="@op.Text">@op.Text</option>
                                                             }
                                                             else
                                                             {
-                                                                <option value="@op.Value" class="DisabledChosen">@op.Text</option>
+                                                                <option value="@op.Value" class="DisabledChosen" title="@op.Text">@op.Text</option>
                                                             }
                                                         }
                                                     </select>
@@ -303,16 +303,16 @@
                                             </tr>
                                             <tr>
                                                 <td>
-                                                    <select id="AvailableProductAreas" multiple="multiple" name="AvailableProductAreas" style="width: 350px; height: 120px">
+                                                    <select id="AvailableProductAreas" multiple="multiple" name="AvailableProductAreas" style="width: 400px; height: 120px">
                                                         @foreach (var op in Model.AvailableProductAreas)
                                                         {
                                                             if (!op.Disabled)
                                                             {
-                                                                <option value="@op.Value">@op.Text</option>
+                                                                <option value="@op.Value" title="@op.Text">@op.Text</option>
                                                             }
                                                             else
                                                             {
-                                                                <option value="@op.Value" class="DisabledChosen">@op.Text</option>
+                                                                <option value="@op.Value" class="DisabledChosen" title="@op.Text">@op.Text</option>
                                                             }
                                                         }
                                                     </select>
@@ -322,16 +322,16 @@
                                                     <input type="button" value="&gt;" class="btn" id="addProductArea" />
                                                 </td>
                                                 <td>
-                                                    <select id="SelectedProductAreas" multiple="multiple" name="SelectedProductAreas" style="width: 350px; height: 120px">
+                                                    <select id="SelectedProductAreas" multiple="multiple" name="SelectedProductAreas" style="width: 400px; height: 120px">
                                                         @foreach (var op in Model.SelectedProductAreas)
                                                         {
                                                             if (!op.Disabled)
                                                             {
-                                                                <option value="@op.Value">@op.Text</option>
+                                                                <option value="@op.Value" title="@op.Text">@op.Text</option>
                                                             }
                                                             else
                                                             {
-                                                                <option value="@op.Value" class="DisabledChosen">@op.Text</option>
+                                                                <option value="@op.Value" class="DisabledChosen" title="@op.Text">@op.Text</option>
                                                             }
                                                         }
                                                     </select>
