[ADD] #59265 add setting for Invoice module to show/hide fields

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/Department/_Input.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/Department/_Input.cshtml
@@ -201,6 +201,38 @@
                                     </tr>
                                     <tr>
                                         <td></td>
+                                        <td>
+                                            @Html.CheckBoxFor(m => Model.Department.ShowInvoiceTime)
+                                            &nbsp; @Translation.Get("Visa tid", Enums.TranslationSource.TextTranslation)                                            
+                                        </td>
+                                        <td></td>
+                                    </tr>
+                                    <tr>
+                                        <td></td>
+                                        <td>
+                                            @Html.CheckBoxFor(m => Model.Department.ShowInvoiceOvertime)
+                                            &nbsp; @Translation.Get("Visa övertid", Enums.TranslationSource.TextTranslation)
+                                        </td>
+                                        <td></td>
+                                    </tr>
+                                    <tr>
+                                        <td></td>
+                                        <td>
+                                            @Html.CheckBoxFor(m => Model.Department.ShowInvoiceMaterial)
+                                            &nbsp; @Translation.Get("Visa Material", Enums.TranslationSource.TextTranslation)
+                                        </td>
+                                        <td></td>
+                                    </tr>
+                                    <tr>
+                                        <td></td>
+                                        <td>
+                                            @Html.CheckBoxFor(m => Model.Department.ShowInvoicePrice)
+                                            &nbsp; @Translation.Get("Visa Pris", Enums.TranslationSource.TextTranslation)
+                                        </td>
+                                        <td></td>
+                                    </tr>
+                                    <tr>
+                                        <td></td>
                                         <td>&nbsp;</td>
                                     </tr>
                                     <tr>
